# ADS_Structures

./: CMakeLists.txt  main.c
DLS_Stack/: DLS_Stack.c  DLS_Stack.h
deque/: deque.c  deque.h
doubleLinkedList/: doubleLinkedList.c  doubleLinkedList.h
fileQueue/: fileQueue.c  fileQueue.h
queueArray/: queueArray.c  queueArray.h
queueList/: queueList.c  queueList.h
singleLinkedLinearList/: singleLinkedLinearList.c  singleLinkedLinearList.h
singleLinkedLinearListCycled/: singleLinkedLinearListCycled.c  singleLinkedLinearListCycled.h
stackArray/: stackArray.c  stackArray.h
stackList/: stackList.c  stackList.h
